ESURVEY-6800 Alignment issue with New Official EC skin

--- a/src/main/webapp/resources/css/ecnew.css
+++ b/src/main/webapp/resources/css/ecnew.css
@@ -460,3 +460,7 @@ body {
 	width: 24px;
 	margin-bottom: 4px;
 }
+
+.check {
+    margin-bottom: 6px !important;
+}
